# code-challenges

./: .gitignore  .pylintrc  Makefile  Pipfile  README.md  go.mod  jest.config.js  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: test.yml
src/codewars/4-kyu/: 4-kyu.md
src/codewars/5-kyu/: 5-kyu.md
src/codewars/6-kyu/: 6-kyu.md
src/codewars/7-kyu/: 7-kyu.md
src/codewars/8-kyu/: 8-kyu.md
src/daily-coding-problem/easy/: README.md
src/daily-coding-problem/hard/: README.md
src/daily-coding-problem/medium/: README.md
src/exponent/: exponent.md
src/exponent/time-planner/: time_planner.py
src/hacker-rank/: README.md
src/hacker-rank/area-of-the-box/: area_of_the_box.py
src/hacker-rank/array-manipulation/: array_manipulation.py  test_array_manipulation.py
src/hacker-rank/easy/: easy.md
src/hacker-rank/hard/: hard.md
src/hacker-rank/medium/: medium.md
src/hacker-rank/two-strings/: two_strings.py
src/interview-cake/: README.md
src/interview-cake/cake-thief/: cake_thief.py  test_cake_thief.py
src/interview-cake/check-lists-order/: check_lists_order.py  test_check_lists_order.py
src/interview-cake/delete-node/: delete_node.py  test_delete_node.py
src/interview-cake/find-starting-word-in-dictionary/: find_starting_word_in_dictionary.py  test_find_starting_word_in_dictionary.py
src/interview-cake/fisher-yates-shuffle/: fisher_yates_shuffle.py  test_fisher_yates_shuffle.py
src/lambda-school/week-1/: week-1.md
src/leetcode/: leetcode.md
src/miscellaneous-code-challenges/: misc-code-challenges.md
src/pramp/: pramp.md
(+861 files in other folders)
