[project]
name = "code-challenges"
version = "0.0.0-alpha"
description = "A repository for housing code challenges"
authors = [
    {name = "Nathan Thomas"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sortedcontainers==2.4.0",
]

[tool.uv]
dev-dependencies = [
    "pylint==3.3.1",
]
