[project]
name = "code-challenges"
version = "0.0.0-alpha"
description = "A repository for housing code challenges"
authors = [
    {name = "Nathan Thomas"}
]
license = {text = "GPL-3.0"}
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pytest==9.0.2",
    "sortedcontainers==2.4.0",
]

[dependency-groups]
dev = [
    "pylint==3.3.1",
]
